--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
               </table>
             </div>
 
-            <div class="col-12 selected-incident">
+            <div class="col-12 container selected-incident">
               <div class="header-section">
                   <div>
                       <span>Incident Number: </span><span id="selectedIncidentKey"></span>
