--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,7 +48,7 @@
             <div class="col-md">
               <ul class="input-list-group">
                 <li class="input-list">
-                  <label for="incident-key" class="control-label">INCIDENT KEY</label>
+                  <label for="incident-key" class="control-label">INCIDENT NUMBER</label>
                 </li>
                 <li class="input-list">
                   <input type="text" id="incidentKey">
@@ -60,7 +59,6 @@
               <div class="input-group filter-btn">
                 <button type="button" class="btn btn-default filter-button">FILTER</button>
               </div>
-              
             </div>
             <div class="col-md-1">
             <div class="input-group filter-btn">
@@ -73,7 +71,7 @@
   </header>
   <section>
     <div class="alert alert-danger service-error" role="alert">
-      <strong>Error! </strong>Please enter valid date values or incident key.
+      <strong>Error! </strong>Please enter valid date values or incident number.
     </div>
   </section>
   <main class="container">
@@ -85,13 +83,12 @@
         <table id="incidentsTable" class="display" style="width:100%">
           <thead>
             <tr>
-              <th>Incident Key</th>
+              <th>Incident Number</th>
               <th>List Of Errors</th>
             </tr>
           </thead>
         </table>
       </div>
-
       <div class="col-12 container selected-incident">
         <div class="go-back-btn-container">
           <button type="button" class="btn btn-default" id="goBackBtn"><i class="material-icons">
