--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
               <ul class="input-list-group">
                 <li class="input-list"> <label for="date-end" class="control-label">END DATE</label></li>
                 <li class="input-list">
-                  <input onclick type="text" placeholder="Select Date.." id="endDate" readonly="readonly">
+                  <input type="text" placeholder="Select Date.." id="endDate" readonly="readonly">
                 </li>
               </ul>
             </div>
@@ -107,9 +107,14 @@
         </div>
       </div>
     </div>
-
   </main>
-
+  <!-- Add if necessary -->
+  <!-- <footer class="fixed-bottom">
+    Copyright @2019 by City of Detroit <br>
+    All material is the property of the City of Detroit and may only be used with permission.
+    
+    Privacy Policy / Disclaimer
+  </footer> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
   <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U"
